@@ -1,3 +1,7 @@
+2008-11-22  kokosabu  <kokosabu@gmail.com>
+
+        * Fixnum.h : fixed BITS.
+
 2008-11-21  kokosabu  <kokosabu@gmail.com>
 
         * Added : fix*.
